[workspace]
resolver = "2"
members = [
    "crates/brush-app",
    "crates/brush-bench-test",
    "crates/brush-cli",
    "crates/brush-dataset",
    "crates/brush-kernel",
    "crates/brush-prefix-sum",
    "crates/brush-process",
    "crates/brush-render",
    "crates/brush-render-bwd",
    "crates/brush-rerun",
    "crates/brush-serde",
    "crates/brush-serde-macros",
    "crates/brush-sh-utils",
    "crates/brush-sort",
    "crates/brush-spz",
    "crates/brush-train",
    "crates/brush-ui",
    "crates/brush-vfs",
    "crates/brush-wgsl",
    "crates/colmap-reader",
    "crates/lpips",
    "crates/lpips-convert",
    "crates/rrfd",
    "examples/train-2d",
]
default-members = ["crates/brush-app"]

[workspace.package]
edition = "2024"
version = "0.3.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/ArthurBrussee/brush"

[workspace.dependencies]
glam = { version = "0.30", features = ["serde"] }
bytemuck = "1.20"
image = { version = "0.25", default-features = false, features = [
    'png',
    'webp',
    "jpeg",
    'exr'
] }

serde = { version = "1.0.215", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.133", default-features = false }

rand = "0.9.0"
tracing = "0.1.41"
tracing-tracy = "0.11.3"
tracing-subscriber = "0.3.19"

winapi = "0.3"

tokio = { version = "1.42.0", default-features = false }
tokio_with_wasm = "0.8.2"
tokio-stream = "0.1"
tokio-util = { version = "0.7.13", features = ["io"] }

anyhow = "1.0.94"
thiserror = "2.0"

reqwest = { version = "0.12.9", default-features = false, features = [
    "stream",
    "rustls-tls",
] }

indicatif = "0.18"
env_logger = "0.11"
clap = { version = "4.5.23", features = ["derive"] }

web-time = "1.1.0"
humantime = "2.1.0"
async-fn-stream = "0.3"
assert_approx_eq = "1.1.0"
safetensors = "0.7"
log = "0.4.22"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4"

rayon = "1.11"

naga_oil = { version = "0.19", default-features = false }

# Backends are chosen per platform.
wgpu = { version = "26", default-features = false, features = ["naga-ir"] }

serde-ply = "0.2.1"

burn = { git = "https://github.com/tracel-ai/burn", features = [
    'wgpu',
] }
burn-cubecl = { git = "https://github.com/tracel-ai/burn" }
burn-ir = { git = "https://github.com/tracel-ai/burn" }
burn-wgpu = { git = "https://github.com/tracel-ai/burn", features = [
    "exclusive-memory-only",
] }
burn-fusion = { git = "https://github.com/tracel-ai/burn" }
burn-import = { git = "https://github.com/tracel-ai/burn", default-features = false, features = [
    "pytorch",
] }

egui = { version = "0.32"  }
eframe = { version = "0.32", default-features = false, features = [
    "wgpu",
    "android-game-activity",
    "wayland",
    "x11",
    "persistence",
] }

egui_tiles = { version = "0.13.0", features = ["serde"] }

rerun = { version = "0.27", default-features = false, features = [
    'sdk',
    'glam',
] }

ball-tree = "0.5.1"

web-sys = { version = "0.3.74" }
async_zip = { version = "0.0.18", default-features = false, features = ["tokio", "deflate"] }
hashbrown = "0.16"
alphanumeric-sort = "1.5.3"

# Uncomment this to use local burn/cubecl.
# [patch."https://github.com/tracel-ai/burn"]
# burn = { path = "../burn/crates/burn" }
# burn-cubecl = { path = "../burn/crates/burn-cubecl" }
# burn-wgpu = { path = "../burn/crates/burn-wgpu" }
# burn-fusion = { path = "../burn/crates/burn-fusion" }
# burn-ir = { path = "../burn/crates/burn-ir" }
# burn-import = { path = "../burn/crates/burn-import" }

# [patch."https://github.com/tracel-ai/cubecl"]
# cubecl = { path = "../cubecl/crates/cubecl" }
# cubecl-common = { path = "../cubecl/crates/cubecl-common" }
# cubecl-std = { path = "../cubecl/crates/cubecl-std" }
# cubecl-core = { path = "../cubecl/crates/cubecl-core" }
# cubecl-runtime = { path = "../cubecl/crates/cubecl-runtime" }
# cubecl-quant = { path = "../cubecl/crates/cubecl-quant" }

[patch.crates-io]
wgpu = { git = "https://github.com/ArthurBrussee/wgpu", branch = "v26" }
naga = { git = "https://github.com/ArthurBrussee/wgpu", branch = "v26" }

egui = { git = "https://github.com/emilk/egui", rev = "c97c065a575ec6e657bb42872890a00d0fb391c1"  }
eframe = { git = "https://github.com/emilk/egui", rev = "c97c065a575ec6e657bb42872890a00d0fb391c1" }
emath = { git = "https://github.com/emilk/egui", rev = "c97c065a575ec6e657bb42872890a00d0fb391c1" }

# Uncomment this to use local wgpu and naga.
# wgpu.path = "../wgpu/wgpu"
# naga.path = "../wgpu/naga"

[profile.dev]
opt-level = 1
# Reduce debuginfo for faster linking
debug = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# debug = true # good for profilers

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
as_ptr_cast_mut = "warn"
await_holding_lock = "warn"
bool_to_int_with_if = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
derive_partial_eq_without_eq = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
implied_bounds_in_impls = "warn"
imprecise_flops = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_enforced_import_renames = "warn"
missing_safety_doc = "warn"
mixed_attributes_style = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_lifetimes = "warn"
negative_feature_names = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
print_stderr = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
readonly_write_lock = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"

string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suspicious_command_arg_space = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
tuple_array_conversions = "warn"
unchecked_duration_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
uninhabited_references = "warn"
uninlined_format_args = "warn"
unnecessary_safety_doc = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unused_self = "warn"
use_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
redundant_clone = "warn"

iter_over_hash_type = "warn"
missing_assert_message = "warn"
should_panic_without_expect = "warn"


# Too many false positives
significant_drop_tightening = "allow"

# For WASM this is quite common
arc_with_non_send_sync = "allow"

# TODO: More docs
missing_errors_doc = "allow"
new_without_default = "allow"

# # These are meh:
# Annoying: Some functions need Box so don't want to force user to to do this.
# unnecessary_box_returns = "allow"
# Annoying: Some arms logically are different even if they do the same thing.
# match_same_arms = "allow"
# Annoying: operators are fine.
# string_add = "allow"
# string_add_assign = "allow"
# Annoying: I like big functuions what can I say.
too_many_lines = "allow"
too_many_arguments = "allow"
needless_range_loop = "allow"

# This doesn't quite work with Burn:
single_range_in_vec_init = "allow"

# NOTE: This is a temporary workaround for macOS tahoe, and xcode 16.4+.
# Some requirement for FFI has changed, and macOS crashes because of a
# sign mismatch ("expected return to have type code 'q', but found 'Q'")
# This workaround disables the problematic check entirely.
# objc2 0.6+ has a better workaround that only disables sign conversion
# checks, see https://github.com/madsmtm/objc2/issues/765#issuecomment-2996136843,
# and new winit versions are enabling this by default: https://github.com/madsmtm/objc2/issues/765.
# When that has landed and Bevy has updated to a new winit version this workaround should be removed.
[profile.dev.package.objc2]
debug-assertions = false
