[package]
name = "brush-spz"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render = { path = "../brush-render" }
brush-sh-utils = { path = "../brush-sh-utils" }
burn = { workspace = true, features = ["ndarray"] }
burn-cubecl = { workspace = true }
glam = { workspace = true }
flate2 = "1.0"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
byteorder = "1.5"
log = { workspace = true }

[dev-dependencies]
brush-serde = { path = "../brush-serde" }
burn-wgpu = { workspace = true }
